<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.android.shustudenthelper.PasswordRecoveryActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/image_shu"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:src="@drawable/shuhome_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignBottom="@id/image_shu"
            android:layout_gravity="center_horizontal"
            android:text="SHU STUDENT HELPER"
            android:textAllCaps="true"
            android:textAppearance="@style/Widget.Design.CoordinatorLayout"
            android:textColor="@color/gray"
            android:textSize="25sp"
            android:textStyle="italic|bold"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginRight="0dp"
            android:layout_marginTop="48dp"
            android:text="@string/note_to_user"
            android:textSize="16sp"
            />

    </LinearLayout>
    <!-- Select Question Process -->

    <LinearLayout
        android:id="@+id/email_login_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/securityquestion_askuser"
            android:layout_weight="2"
            android:textSize="@dimen/activity_horizontal_margin"/>


        <Spinner

            android:id="@+id/question_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:entries="@array/question_array"
            android:prompt="@string/question_prompt">

        </Spinner>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="24dp"
        android:orientation="horizontal">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="bottom"
            android:layout_marginTop="32dp"
            android:text="@string/answer_askuser"
            android:textSize="@dimen/activity_horizontal_margin"/>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/security_answer_user"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeActionId="@+id/answer"
                android:imeActionLabel="@string/action_sign_in_short"
                android:imeOptions="actionUnspecified"
                android:inputType="textPassword"
                android:maxLines="1" />


        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <Button
        android:id="@+id/next_set_up_button"
        style="?android:textAppearanceSmall"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:text="@string/next_setup"
        android:textStyle="bold" />


</LinearLayout>
